Convert sphgeom to a stack package.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
-build
+*.dylib
+*.o
+*.os
+*.pyc
+*.so
 *~
 core.*
 .sconf_temp
@@ -8,5 +12,21 @@ doc/doxygen.conf
 doc/html
 doc/xml
 doc/*.tag
-include
-lib
+python/lsst/sphgeom/version.py
+tests/.tests/
+tests/AngleIntervalTest
+tests/AngleTest
+tests/BigIntegerTest
+tests/BoxTest
+tests/ChunkerTest
+tests/CircleTest
+tests/ConvexPolygonTest
+tests/EllipseTest
+tests/LonLatTest
+tests/Matrix3dTest
+tests/NormalizedAngleIntervalTest
+tests/NormalizedAngleTest
+tests/OrientationTest
+tests/UnitVector3dTest
+tests/Vector3dTest
+ups/*.cfgc
