Implement HTM / region intersection.
It is now possible to compute the indexes of the trixels
intersecting a given region, optionally using an adaptive
subdivision level to limit computational costs. This is
exposed by making the HTM code an implementation of the
new Pixelization interface.

The HTM specific documentation is moved to a markdown file,
and .md files are flagged for doxygen processing. This also
allows the top-level github README to be reused as the
doxygen mainpage.

--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ tests/testUnitVector3d
 tests/testVector3d
 tests/.cache/*
 tests/curveTest
-tests/htmTest
+tests/HtmPixelizationTest
 tests/q3cTest
 tests/RangeSetTest
 ups/*.cfgc
