Introduce Q3C and modified-Q3C pixelization subclasses.
Region indexing in both schemes remains to be implemented.

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,6 @@ tests/testVector3d
 tests/.cache/*
 tests/curveTest
 tests/HtmPixelizationTest
-tests/q3cTest
+tests/Q3cPixelizationTest
 tests/RangeSetTest
 ups/*.cfgc
