Rename new tests to comply with naming conventions

--- a/.gitignore
+++ b/.gitignore
@@ -24,18 +24,18 @@ tests/testBox3d
 tests/testChunker
 tests/testCircle
 tests/testConvexPolygon
+tests/testCurve
 tests/testEllipse
+tests/testHtmPixelization
 tests/testInterval1d
 tests/testLonLat
 tests/testMatrix3d
 tests/testNormalizedAngleInterval
 tests/testNormalizedAngle
 tests/testOrientation
+tests/testQ3cPixelization
+tests/testRangeSet
 tests/testUnitVector3d
 tests/testVector3d
 tests/.cache/*
-tests/curveTest
-tests/HtmPixelizationTest
-tests/Q3cPixelizationTest
-tests/RangeSetTest
 ups/*.cfgc
