Make Chunker available from Python.

--- a/python/lsst/sphgeom/SConscript
+++ b/python/lsst/sphgeom/SConscript
@@ -4,6 +4,7 @@ scripts.BasicSConscript.pybind11([
     'angleInterval',
     'box',
     'box3d',
+    'chunker',
     'circle',
     'convexPolygon',
     'curve',
