git hide test and caches and .coverage

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,10 @@ _build.*
 core.*
 .sconf_temp
 .sconsign.dblite
+.cache
+.pytest_cache
+pytest_session.txt
+.coverage
 config.log
 doc/doxygen.conf
 doc/html
