--- a/ups/sphgeom.cfg
+++ b/ups/sphgeom.cfg
@@ -4,7 +4,7 @@ import lsst.sconsUtils
 
 dependencies = {
     "required": [],
-    "buildRequired": ["sconsUtils", "pybind11"],
+    "buildRequired": [],
 }
 
 config = lsst.sconsUtils.Configuration(
