--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,36 @@
+[metadata]
+name = lsst_sphgeom
+description = A Spherical Geometry Library
+author = LSST Data Management
+author_email = support@lsst.org
+license = GPLv3
+url = https://github.com/lsst/sphgeom
+classifiers =
+    Intended Audience :: Science/Research
+    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
+    Operating System :: OS Independent
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.6
+    Topic :: Scientific/Engineering :: Astronomy
+
+[options]
+zip_safe = False
+package_dir=
+    =python
+packages=find:
+setup_requires =
+  pybind11 >=2.5.0
+  setuptools_cpp >=0.0.1
+install_requires =
+  pyyaml >=5.1
+tests_require =
+  pytest >= 3.2
+  flake8 >= 3.7.5
+  pytest-flake8 >= 1.0.4
+
+[options.packages.find]
+where=python
+
 [flake8]
 max-line-length = 110
 max-doc-length = 79
