Add setuptools and numpy as dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,10 +19,14 @@ package_dir=
     =python
 packages=find:
 setup_requires =
+  setuptools >=46.0
+  wheel
   pybind11 >=2.5.0
+  numpy >=1.17
   setuptools_cpp >=0.0.1
 install_requires =
   pyyaml >=5.1
+  numpy >=1.17
 tests_require =
   pytest >= 3.2
   flake8 >= 3.7.5
