Rename sphgeom.cc to _sphgeom.cc to match modern style

--- a/python/lsst/sphgeom/SConscript
+++ b/python/lsst/sphgeom/SConscript
@@ -1,33 +1,35 @@
 from lsst.sconsUtils import scripts
 
 scripts.BasicSConscript.pybind11(
-    nameList=["sphgeom"],
-    extraSrc={"sphgeom": [
-        "angle.cc",
-        "angleInterval.cc",
-        "box.cc",
-        "box3d.cc",
-        "chunker.cc",
-        "circle.cc",
-        "convexPolygon.cc",
-        "curve.cc",
-        "ellipse.cc",
-        "htmPixelization.cc",
-        "interval1d.cc",
-        "lonLat.cc",
-        "matrix3d.cc",
-        "mq3cPixelization.cc",
-        "normalizedAngle.cc",
-        "normalizedAngleInterval.cc",
-        "orientation.cc",
-        "pixelization.cc",
-        "q3cPixelization.cc",
-        "rangeSet.cc",
-        "region.cc",
-        "relationship.cc",
-        "unitVector3d.cc",
-        "utils.cc",
-        "vector3d.cc",
-    ]},
+    ["_sphgeom"],
+    extraSrc={
+        "_sphgeom": [
+            "angle.cc",
+            "angleInterval.cc",
+            "box.cc",
+            "box3d.cc",
+            "chunker.cc",
+            "circle.cc",
+            "convexPolygon.cc",
+            "curve.cc",
+            "ellipse.cc",
+            "htmPixelization.cc",
+            "interval1d.cc",
+            "lonLat.cc",
+            "matrix3d.cc",
+            "mq3cPixelization.cc",
+            "normalizedAngle.cc",
+            "normalizedAngleInterval.cc",
+            "orientation.cc",
+            "pixelization.cc",
+            "q3cPixelization.cc",
+            "rangeSet.cc",
+            "region.cc",
+            "relationship.cc",
+            "unitVector3d.cc",
+            "utils.cc",
+            "vector3d.cc",
+        ]
+    },
     addUnderscore=False
 )
