Rename all python interface C++ file to use leading underscore

--- a/python/lsst/sphgeom/SConscript
+++ b/python/lsst/sphgeom/SConscript
@@ -4,31 +4,31 @@ scripts.BasicSConscript.pybind11(
     ["_sphgeom"],
     extraSrc={
         "_sphgeom": [
-            "angle.cc",
-            "angleInterval.cc",
-            "box.cc",
-            "box3d.cc",
-            "chunker.cc",
-            "circle.cc",
-            "convexPolygon.cc",
-            "curve.cc",
-            "ellipse.cc",
-            "htmPixelization.cc",
-            "interval1d.cc",
-            "lonLat.cc",
-            "matrix3d.cc",
-            "mq3cPixelization.cc",
-            "normalizedAngle.cc",
-            "normalizedAngleInterval.cc",
-            "orientation.cc",
-            "pixelization.cc",
-            "q3cPixelization.cc",
-            "rangeSet.cc",
-            "region.cc",
-            "relationship.cc",
-            "unitVector3d.cc",
-            "utils.cc",
-            "vector3d.cc",
+            "_angle.cc",
+            "_angleInterval.cc",
+            "_box.cc",
+            "_box3d.cc",
+            "_chunker.cc",
+            "_circle.cc",
+            "_convexPolygon.cc",
+            "_curve.cc",
+            "_ellipse.cc",
+            "_htmPixelization.cc",
+            "_interval1d.cc",
+            "_lonLat.cc",
+            "_matrix3d.cc",
+            "_mq3cPixelization.cc",
+            "_normalizedAngle.cc",
+            "_normalizedAngleInterval.cc",
+            "_orientation.cc",
+            "_pixelization.cc",
+            "_q3cPixelization.cc",
+            "_rangeSet.cc",
+            "_region.cc",
+            "_relationship.cc",
+            "_unitVector3d.cc",
+            "_utils.cc",
+            "_vector3d.cc",
         ]
     },
     addUnderscore=False
