Make yaml optional
There is no reason to fail catastrophically if yaml is missing
since the yaml feature we use is to ensure that when yaml is used
we serialize properly for yaml. In the absence of pyyaml we aren't
serializing to yaml.

We still retain it in the requirements.txt

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,12 +25,14 @@ setup_requires =
   numpy >=1.17
   setuptools_cpp >=0.0.1
 install_requires =
-  pyyaml >=5.1
   numpy >=1.17
 tests_require =
   pytest >= 3.2
   flake8 >= 3.7.5
   pytest-flake8 >= 1.0.4
+
+[options.extras_require]
+yaml = pyyaml>=5.1
 
 [options.packages.find]
 where=python
