--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,10 +16,7 @@ jobs:
           python-version: 3.7
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip install tox
 
-      - name: Build and install
-        run: pip install -v .
-
-      - name: Run tests
-        run: pytest -r a -v
+      - name: Build and test
+        run: tox -e py
