--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,43 @@
+[metadata]
+name = lsst_sphgeom
+description = A spherical geometry library.
+long_description = file: README.md
+long_description_content_type = text/markdown
+author = LSST Data Management
+author_email = support@lsst.org
+url = https://github.com/lsst/sphgeom
+classifiers =
+    Intended Audience :: Science/Research
+    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
+    Operating System :: OS Independent
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.6
+    Topic :: Scientific/Engineering :: Astronomy
+
+[options]
+zip_safe = False
+package_dir =
+    =python
+packages = find:
+setup_requires =
+  setuptools >=46.0
+  wheel
+  pybind11 >=2.5.0
+  numpy >=1.18
+install_requires =
+  numpy >=1.18
+
+[options.extras_require]
+yaml = pyyaml>=5.1
+test =
+  pytest >= 3.2
+  flake8 >= 3.7.5
+  pytest-flake8 >= 1.0.4
+
+
+[options.packages.find]
+where=python
+
 [flake8]
 max-line-length = 110
 max-doc-length = 79
