Improve setuptools metadata
- Removed license field because it's not recommended when there is a
  license classifier.
- Moved long_description to setup.cfg, removing that logic from setup.py
- Formatting consistency

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,16 +1,15 @@
 [metadata]
 name = lsst_sphgeom
-description = A Spherical Geometry Library
+description = A spherical geometry library.
 author = LSST Data Management
 author_email = support@lsst.org
-license = GPLv3
 url = https://github.com/lsst/sphgeom
 classifiers =
     Intended Audience :: Science/Research
     License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
     Operating System :: OS Independent
     Programming Language :: Python :: 3
-    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
     Topic :: Scientific/Engineering :: Astronomy
 
 [options]
@@ -35,7 +34,7 @@ tests_require =
 yaml = pyyaml>=5.1
 
 [options.packages.find]
-where=python
+where = python
 
 [flake8]
 max-line-length = 110
