Remove tests_require section
tests_require is deprecated, so instead we've created a "test" extra.

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,13 +25,13 @@ setup_requires =
   setuptools_cpp >=0.0.1
 install_requires =
   numpy >=1.17
-tests_require =
-  pytest >= 3.2
-  flake8 >= 3.7.5
-  pytest-flake8 >= 1.0.4
 
 [options.extras_require]
 yaml = pyyaml>=5.1
+test =
+  pytest >= 3.2
+  flake8 >= 3.7.5
+  pytest-flake8 >= 1.0.4
 
 [options.packages.find]
 where = python
