--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,11 +15,10 @@ jobs:
         with:
           python-version: 3.7
 
-      - name: Install dependencies
-        run: pip install -r requirements.txt
-
       - name: Build and install
-        run: pip install -v .
+        run: |
+          python -m pip install --upgrade pip setuptools
+          python -m pip install .[yaml,test]
 
       - name: Run tests
         run: pytest -r a -v
