Add healpy to install_requires and cmake action.

--- a/.github/workflows/cmake.yaml
+++ b/.github/workflows/cmake.yaml
@@ -24,7 +24,8 @@ jobs:
             pybind11[global] \
             pytest \
             pytest-flake8 \
-            pyyaml
+            pyyaml \
+            healpy
 
       - name: CMake configure
         run: |
