--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main
+    tags:
+      - "*"
   pull_request:
 
 jobs:
@@ -29,3 +31,93 @@ jobs:
 
       - name: Run tests
         run: pytest -r a -v
+
+  pypi_sdist_build:
+    runs-on: ubuntu-latest
+    needs: [build_and_test]
+    if: startsWith(github.ref, 'refs/tags/')
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+          cache: "pip"
+          cache-dependency-path: "setup.cfg"
+
+      - name: Set up Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: 3.8
+          cache: "pip"
+          cache-dependency-path: "setup.cfg"
+
+      - name: Install dependencies
+        run: |
+          pip install --upgrade setuptools wheel build
+
+      - name: Build and create distribution
+        run: |
+            python -m build --sdist
+
+      - uses: actions/upload-artifact@v3
+        with:
+          path: dist/*
+
+  pypi_wheel_build:
+    strategy:
+      matrix:
+        os: ["ubuntu-latest", "macOS-10.15"]
+    runs-on: ${{ matrix.os }}
+    needs: [build_and_test]
+    if: startsWith(github.ref, 'refs/tags/')
+    env:
+      CIBW_BUILD: "cp3{8,9,10}-{manylinux_x86_64,manylinux_aarch64,macosx_arm64,macosx_x86_64}"
+      CIBW_ARCHS_MACOS: "x86_64 arm64"
+      # use line below to enable aarch64 builds
+      # CIBW_ARCHS_LINUX: "auto aarch64"
+      CIBW_ARCHS_LINUX: "auto"
+
+    steps:
+      # uncomment when building aarch64
+      #- name: Set up QEMU
+      #  uses: docker/setup-qemu-action@v2
+      #  if: runner.os == 'Linux'
+      #  with:
+      #    platforms: arm64
+
+      - uses: actions/checkout@v3
+        with:
+          # Need to clone everything to embed the versiona
+          fetch-depth: 0
+          cache: "pip"
+          cache-dependency-path: "setup.cfg"
+
+      - name: Set up Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: 3.8
+          cache: "pip"
+          cache-dependency-path: "setup.cfg"
+
+      - name: Install dependencies
+        run: |
+          pip install --upgrade setuptools wheel cibuildwheel
+
+      - name: Build and create distribution
+        run: |
+          python -m cibuildwheel --output-dir dist
+      - uses: actions/upload-artifact@v3
+        with:
+          path: dist/*
+
+  pipy_upload:
+    needs: [pypi_sdist_build, pypi_wheel_build]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/download-artifact@v3
+        with:
+          name: artifact
+          path: dist
+      - uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          user: __token__
+          password: ${{ secrets.PYPI_UPLOADS }}
