--- a/setup.cfg
+++ b/setup.cfg
@@ -1,22 +1,35 @@
 [metadata]
-name = lsst_sphgeom
+name = lsst-sphgeom
 description = A spherical geometry library.
-author = LSST Data Management
-author_email = support@lsst.org
+author = Rubin Observatory Data Management
+author_email = dm-admin@lists.lsst.org
 url = https://github.com/lsst/sphgeom
+license = GPLv3+ License
 classifiers =
     Intended Audience :: Science/Research
     License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
-    Operating System :: OS Independent
+    Operating System :: POSIX :: Linux
+    Operating System :: MacOS :: MacOS X
     Programming Language :: Python :: 3
-    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
     Topic :: Scientific/Engineering :: Astronomy
+readme = file: README.md
+long_description = file: README.md
+long_description_content_type = text/markdown
+
+keywords =
+    lsst
 
 [options]
 zip_safe = False
+python_requires = >=3.8
 package_dir=
     =python
 packages=find:
+setup_requires =
+  setuptools >=46.0
 install_requires =
   numpy >=1.18
   healpy
