Update requirements and workflow to use hpgeom instead of healpy.

--- a/.github/workflows/cmake.yaml
+++ b/.github/workflows/cmake.yaml
@@ -28,7 +28,7 @@ jobs:
             pytest \
             pytest-flake8 \
             pyyaml \
-            healpy
+            hpgeom
 
       - name: CMake configure
         run: |
