--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10"]
+        python-version: ["3.10"]
 
     steps:
       - uses: actions/checkout@v3
@@ -30,7 +30,7 @@ jobs:
 
       - name: Build and install
         run: |
-          python -m pip install --upgrade pip setuptools
+          python -m pip install --upgrade "pip<22" setuptools
           python -m pip install .[yaml,test]
 
       - name: Run tests
