--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ requires = [
     "lsst-versions >= 1.3.0",
     "wheel",
     "pybind11 >= 2.5.0",
-    "numpy >= 1.18",
+    "numpy != 1.23.2",
 ]
 build-backend = "setuptools.build_meta"
 
