--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
 requires = [
-    "setuptools",
+    "setuptools <= 63.3",
     "lsst-versions >= 1.3.0",
     "wheel",
     "pybind11 >= 2.5.0",
-    "numpy != 1.23.2",
+    "numpy",
 ]
 build-backend = "setuptools.build_meta"
 
