--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
 requires = [
-    "setuptools <= 64",
+    "setuptools",
     "lsst-versions >= 1.3.0",
     "wheel",
     "pybind11 >= 2.5.0",
