--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -22,7 +22,7 @@ jobs:
           fetch-depth: 0
 
       - name: Set up Python
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
           cache: "pip"
@@ -30,7 +30,7 @@ jobs:
 
       - name: Build and install
         run: |
-          python -m pip install --upgrade pip "setuptools<65" "flake8<5"
+          python -m pip install --upgrade pip setuptools "flake8<5"
           python -m pip install .[yaml,test]
 
       - name: Run tests
@@ -48,13 +48,13 @@ jobs:
           cache-dependency-path: "setup.cfg"
 
       - name: Set up Python
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v4
         with:
           python-version: 3.8
 
       - name: Install dependencies
         run: |
-          pip install --upgrade "setuptools<65" wheel build
+          pip install --upgrade setuptools wheel build
 
       - name: Build and create distribution
         run: |
@@ -92,13 +92,13 @@ jobs:
           fetch-depth: 0
 
       - name: Set up Python
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v4
         with:
           python-version: 3.8
 
       - name: Install dependencies
         run: |
-          pip install --upgrade "setuptools<65" wheel cibuildwheel
+          pip install --upgrade setuptools wheel cibuildwheel
 
       - name: Build and create distribution
         run: |
