--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,6 +7,7 @@ repos:
           - "--unsafe"
       - id: end-of-file-fixer
       - id: trailing-whitespace
+      - id: check-toml
   - repo: https://github.com/psf/black
     rev: 23.1.0
     hooks:
