--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Build and install
         run: |
-          python -m pip install --upgrade pip setuptools "flake8<5"
+          python -m pip install --upgrade pip setuptools
           python -m pip install .[yaml,test]
 
       - name: Run tests
