--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,8 +40,6 @@ dynamic = ["version"]
 [project.optional-dependencies]
 test = [
     "pytest >= 3.2",
-    "flake8 >= 3.7.5",
-    "pytest-flake8 >= 1.0.4",
 ]
 yaml = ["pyyaml >= 5.1"]
 
@@ -67,8 +65,7 @@ line_length = 110
 write_to = "python/lsst/sphgeom/version.py"
 
 [tool.pytest.ini_options]
-addopts = "--flake8"
-flake8-ignore = ["E133", "E226", "E228", "N802", "N803", "N806", "N812", "N815", "N816", "W503"]
+addopts = "--import-mode=importlib"  # Recommended as best practice
 
 [tool.pydocstyle]
 convention = "numpy"
