--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -67,7 +67,7 @@ jobs:
   pypi_wheel_build:
     strategy:
       matrix:
-        os: ["ubuntu-latest", "macOS-10.15"]
+        os: ["ubuntu-latest", "macos-11"]
     runs-on: ${{ matrix.os }}
     needs: [build_and_test]
     if: startsWith(github.ref, 'refs/tags/')
