--- a/ups/sphgeom.cfg
+++ b/ups/sphgeom.cfg
@@ -4,7 +4,7 @@ import lsst.sconsUtils
 
 dependencies = {
     "required": [],
-    "buildRequired": ["pybind11"],
+    "buildRequired": ["pybind11", "nanobind"],
 }
 
 config = lsst.sconsUtils.Configuration(
