--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,6 +31,7 @@ jobs:
       - name: Build and install
         run: |
           python -m pip install --upgrade pip setuptools
+          python -m pip list -v
           python -m pip install .[yaml,test]
 
       - name: Run tests
