--- a/pyproject.toml
+++ b/pyproject.toml
@@ -88,9 +88,13 @@ exclude_lines = [
 ]
 
 [tool.ruff]
+line-length = 110
+target-version = "py310"
 exclude = [
     "__init__.py",
 ]
+
+[tool.ruff.lint]
 ignore = [
     "N802",
     "N803",
@@ -107,7 +111,6 @@ ignore = [
     "D200",
     "D205",
 ]
-line-length = 110
 select = [
     "E",  # pycodestyle
     "F",  # pyflakes
@@ -116,13 +119,12 @@ select = [
     "D",  # pydocstyle
     "UP", # pyupgrade
 ]
-target-version = "py310"
 extend-select = [
     "RUF100", # Warn about unused noqa
 ]
 
-[tool.ruff.pycodestyle]
+[tool.ruff.lint.pycodestyle]
 max-doc-length = 79
 
-[tool.ruff.pydocstyle]
+[tool.ruff.lint.pydocstyle]
 convention = "numpy"
