--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -62,6 +62,7 @@ jobs:
 
       - uses: actions/upload-artifact@v4
         with:
+          name: sphgeom-sdist
           path: dist/*
 
   pypi_wheel_build:
@@ -105,6 +106,7 @@ jobs:
           python -m cibuildwheel --output-dir dist
       - uses: actions/upload-artifact@v4
         with:
+          name: sphgeom-${{ matrix.os }}
           path: dist/*
 
   pipy_upload:
@@ -113,8 +115,9 @@ jobs:
     steps:
       - uses: actions/download-artifact@v4
         with:
-          name: artifact
           path: dist
+          pattern: sphgeom-*
+          merge-multiple: true
       - uses: pypa/gh-action-pypi-publish@release/v1
         with:
           user: __token__
