--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "lsst-sphgeom"
 description = "A spherical geometry library."
+requires-python = ">=3.8.0"
 license = {text = "BSD 3-Clause License"}
 readme = "README.md"
 authors = [
@@ -25,6 +26,8 @@ classifiers = [
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
     "Topic :: Scientific/Engineering :: Astronomy",
 ]
 keywords = ["lsst"]
