--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,8 +30,8 @@ jobs:
 
       - name: Build and install
         run: |
-          python -m pip install --upgrade pip setuptools
-          python -m pip install .[yaml,test]
+          python -m pip install --upgrade pip setuptools uv
+          uv pip install --system .[yaml,test]
 
       - name: Run tests
         run: pytest -r a -v
