Enable linux_aarch64

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -104,23 +104,21 @@ jobs:
     strategy:
       matrix:
         os: ["ubuntu-latest", "macos-12"]
+        python-version: ["38", "39", "310", "311", "312", "313"]
     runs-on: ${{ matrix.os }}
     needs: [build_and_test]
     if: startsWith(github.ref, 'refs/tags/')
     env:
-      CIBW_BUILD: "cp3{8,9,10,11,12,13}-{manylinux_x86_64,manylinux_aarch64,macosx_arm64,macosx_x86_64}"
+      CIBW_BUILD: "cp${{ matrix.python-version }}-{manylinux_x86_64,manylinux_aarch64,macosx_arm64,macosx_x86_64}"
       CIBW_ARCHS_MACOS: "x86_64 arm64"
-      # use line below to enable aarch64 builds
-      # CIBW_ARCHS_LINUX: "auto aarch64"
-      CIBW_ARCHS_LINUX: "auto"
+      CIBW_ARCHS_LINUX: "auto aarch64"
 
     steps:
-      # uncomment when building aarch64
-      # - name: Set up QEMU
-      #   uses: docker/setup-qemu-action@v2
-      #   if: runner.os == 'Linux'
-      #   with:
-      #     platforms: arm64
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+        if: runner.os == 'Linux'
+        with:
+          platforms: arm64
 
       - uses: actions/checkout@v4
         with:
@@ -141,7 +139,7 @@ jobs:
           python -m cibuildwheel --output-dir dist
       - uses: actions/upload-artifact@v4
         with:
-          name: sphgeom-${{ matrix.os }}
+          name: sphgeom-${{ matrix.os }}-${{ matrix.python-version }}
           path: dist/*
 
   pipy_upload:
