--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -103,7 +103,7 @@ jobs:
   pypi_wheel_build:
     strategy:
       matrix:
-        os: ["ubuntu-latest", "macos-12"]
+        os: ["ubuntu-latest", "macos-latest"]
         python-version: ["38", "39", "310", "311", "312", "313"]
     runs-on: ${{ matrix.os }}
     needs: [build_and_test]
