Declare lsst as isort first party

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,7 @@ target-version = ["py310"]
 [tool.isort]
 profile = "black"
 line_length = 110
+known_first_party = ["lsst"]
 
 [tool.lsst_versions]
 write_to = "python/lsst/sphgeom/version.py"
