Enable __all__ sorting

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -124,6 +124,7 @@ select = [
     "D",  # pydocstyle
     "UP", # pyupgrade
     "I",  # isort
+    "RUF022",  # sort __all__
 ]
 extend-select = [
     "RUF100", # Warn about unused noqa
