Enable ruff format

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -138,3 +138,7 @@ max-doc-length = 79
 
 [tool.ruff.lint.pydocstyle]
 convention = "numpy"
+
+[tool.ruff.format]
+docstring-code-format = true
+docstring-code-line-length = 79
