--- a/pyproject.toml
+++ b/pyproject.toml
@@ -125,6 +125,7 @@ select = [
     "UP", # pyupgrade
     "I",  # isort
     "RUF022",  # sort __all__
+    "B",  # bugbear
 ]
 extend-select = [
     "RUF100", # Warn about unused noqa
